changed button aimation and add sound

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style/index.css">
+    <link rel="icon" type="image/x-icon" href="data:image/x-icon;,">
     <title>Turbo Text Triumph</title>
     <script type="module" src="./assets/script/index.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
@@ -28,5 +29,7 @@
         <p id="timer">Hits: <span id="scoreHits">0</span> Targets</p>
         <button id="restart-btn2">Restart Game</button>
     </div>
+    <audio id="correctSound" src="./assets/audio/mixkit-interface-option-select-2573.wav" preload="auto"></audio>
+    <audio id="winSound" src="./assets/audio/mixkit-girls-audience-applause-510.wav" preload="auto"></audio>
 </body>
 </html>
