added date and percentage

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
         <h1 >Game Over</h1>
         <h2 id="dis">Game Over</h2>
         <span id="info"> </span>
+   
+        <p id="timer">Date: <span id="Date"></span> </p>
+        <p id="timer">Percentage <span id="percentage"></span></p>
         <p id="timer">Time Taken: <span id="scoreTime">99</span> seconds</p>
-        <p id="timer">Hits: <span id="scoreHits">0</span> Targets</p>
+        <p id="timer">Hits: <span id="scoreHits">0</span> Hits</p>
+    
         <button id="restart-btn2">Restart Game</button>
     </div>
     <audio id="correctSound" src="./assets/audio/mixkit-interface-option-select-2573.wav" preload="auto"></audio>
