--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
         <input type="text" id="word-input" autocomplete="off" autofocus>
         <p id="timer">Time: <span id="time">99</span> seconds</p>
         <p id="score">Hits: <span id="hits">0</span></p>
-        <div style="display: flex;flex-direction: row;gap: 20px;justify-content: center">
+        <div class="start-end">
         <button id="start-btn">Start Game</button>
-        <button id="end-btn" style="display: none;">End Game</button>
+        <button id="end-btn">End Game</button>
         </div>
     </div>
     <div id="score-container">
         <h1 >Game Over</h1>
         <h2 id="dis">Game Over</h2>
         <span id="info"> </span>
-   
         <p id="timer">Date: <span id="Date"></span> </p>
         <p id="timer">Percentage <span id="percentage"></span></p>
         <p id="timer">Time Taken: <span id="scoreTime">99</span> seconds</p>
         <p id="timer">Hits: <span id="scoreHits">0</span> Hits</p>
-    
         <button id="restart-btn2">Restart Game</button>
     </div>
     <audio id="correctSound" src="./assets/audio/mixkit-interface-option-select-2573.wav" preload="auto"></audio>
